style.css
@import 'bootstrap-4.4.1-dist/css/bootstrap.min.css';

:root{
    --var-intro-less-height: 40px; /*variable that sets how many pixels we take out from the height in the intro */
}
body{
    margin: 0;
    padding: 0;
}

.my-shadow{
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
}
    /* --- making dropdown menu hoverable --- */
    
    /* The container <div> - needed to position the dropdown content */
    .dropdown {
        position: relative;
        display: inline-block;
    }
    
    /* Dropdown Content (Hidden by Default) */
    .dropdown-content {
        display: none;
        position: absolute;
        min-width: 160px;
        z-index: 1;
    }
    
    /* Links inside the dropdown */
    .dropdown-content a {
        color: black;
        padding: 10px 14px;
        text-decoration: none;
        display: block;
    }
    
    /* Change color of dropdown links on hover */
    .dropdown-content a:hover {
        background-color: #df5616;
        color: white;
        text-decoration: underline;
    }
    
    /* Show the dropdown menu on hover */
    .dropdown:hover .dropdown-content {display: block;}

    /* --- Header --- */

    header{
        background-color: #df5616e5;
        border-bottom: 3px groove rgb(0, 132, 255);
    }

    .my-nav-link{
        font-family: Arial, Helvetica, sans-serif;
        font-size: 17px;
        font-weight: 700;
    }

    /* Dropdown */
        .my-navbar-dropdown-menu{
            border: 1px solid rgba(98, 98, 98, 0.657);
            background-color: rgb(206, 206, 206);
        }
        
    /* Dropdown */
/* --- Header --- */


/* --- Intro ---  */
    /* Carousel */
    .my-intro-slide-text{
        position: absolute;
        left: 30px;
        top: 35px;

        font-size: 30px;
        font-weight: 700;
        color: rgb(15, 107, 226);
        text-shadow: 3px 2px 2px black;

    }

    .my-carousel-controls > .left{
        position: absolute;
        top: 50%;
        bottom: 50%;
        left: 10px;
        color: rgba(22, 26, 224, 0.692);
    }

    .my-carousel-controls > .right{
        position: absolute;
        top: 50%;
        bottom: 50%;
        right: 10px;
        color: rgba(22, 26, 224, 0.692);
    }

     /* Card */
    .card h2{
        margin: 0;
        text-align: center;
        color: rgb(88, 15, 15);
    } 
    
    #formando{
        border: 3px outset gray;
    }

    .my-intro-card{
        height: calc(100% - var(--var-intro-less-height));
    }

    .my-intro-img-maxi{
        size: cover;
        height: calc(100% - var(--var-intro-less-height));
        width: 100%;
    }
    
/* --- Intro ---  */

/* --- Welcome Section --- */
    .my-welcome-card{
        max-height: 332px;
        height: 332px;   
    }

/* --- Welcome Section --- */

/* --- Login --- */
#login legend{
    text-transform: uppercase;
    text-shadow: 1.5px 1px 2px rgba(0, 0, 0, 0.432);
    font-size: 1.2em;
}

#login .input-group-prepend .input-group-text{
    background: #df5616 linear-gradient(to bottom, #df5616, #ff874f);
    color: white;
}

#login fieldset{
    padding: 10px;
    background: rgba(128, 128, 128, 0.11);
}
/* --- Login --- */

/* ----- meadia queries ----- */
    @media(max-width: 992px){ /*large devices screen size */
        
            .navbar-brand img{
                /* -- Header -- */
                height: 60px;
                width: auto;

                /* -- Header -- */
            }
        }

    
    @media (max-width: 768px) {
    
    }
    @media (max-width: 576px) {

    }


/* ----- meadia queries ----- */

/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

